Fix gap

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -50,3 +50,7 @@ a {
 #nav-space {
   margin-bottom: 5rem;
 }
+
+.no-nav-space {
+  margin-top: -5rem !important;
+}
