--- a/src/sass/layout/_home.scss
+++ b/src/sass/layout/_home.scss
@@ -7,7 +7,6 @@
   background-size: cover;
   overflow: hidden;
   height: 100vh;
-  margin-top: -5rem !important;
 }
 
 #home-content {
